# zavrsni

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx  MainLayout.tsx  axios.ts  constants.ts  custom-hooks.ts  http.ts  index.css  index.tsx  main-router.tsx  query-config.ts  routes.ts  types.ts
client_mobile/: pubspec.yaml
client_mobile/lib/: api.dart  appbar.dart  home.dart  main.dart  stream.dart  stream_list.dart
server/: .env  .gitignore  db.sqlite  index.ts  ormconfig.json  package-lock.json  package.json  test.html  tsconfig.json  users.json
server/src/: config.ts  index.ts  main-router.ts  middlewares.ts  streams.ts  tcp-server.ts  types.ts  utils.ts
text/: Makefile  kratice.tex  latex-reminders.txt  literatura.tex  livestream.tex  main.tex  pregled.tex  references.bib  sazetak.tex  test.tex  uvod.tex  zakljucak.tex
text/implementacija/: klijenti.tex  main.tex  nodejs.tex  tablica-kodeka.tex  transkoder.tex
transcoder/: .clang-format  .gitignore  CMakeLists.txt  cfg.json  conanfile.txt  main.cpp  project_settings.cmake  sources.cmake
transcoder/lib/FFmpeg/: CMakeLists.txt
transcoder/lib/nlohmann_json/: CMakeLists.txt
transcoder/libav_wrappers/: AVPacket.cpp  AVPacket.h
transcoder/src/: Configuration.h  Utils.h  Utils.hpp  constants.hpp  main.cpp  network.hpp
transcoder/src/libav_wrappers/: Codec.cpp  Codec.h  CodecContext.cpp  CodecContext.h  Dictionary.cpp  Dictionary.h  FormatContext.cpp  FormatContext.h  Frame.cpp  Frame.h  Packet.cpp  Packet.h  Result.h  Result.hpp  Utils.cpp  Utils.h
(+22 files in other folders)
